--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?qcklr#1" target="_blank">首页</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/1?enfdjgmt" target="_blank">动态网</a> | <a href="https://di88ceki78g29.cloudfront.net/2?ovlnskcgu" target="_blank">大纪元</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/4?znjhiiq" target="_blank">看中国</a> | <a href="https://d37g5boc7rm625.cloudfront.net/pHh5q?jzoiu" target="_blank">新生网</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/tktpt?tasppxrgf" target="_blank">阿波罗网</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/Mjpvu?vakipl" target="_blank">干净世界</a> | <a href="https://dnfbwsos78njn.cloudfront.net/10?fblvgs" target="_blank">退党服务</a> | <a href="https://dcz6rimunj42y.cloudfront.net/Rffqf?fqvkrzg" target="_blank">明慧广播</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/nw9Vn?bhkuvq" target="_blank">传奇时代</a> | <a href="https://d2aqxvnyguf0uq.cloudfront.net/AF9AG?whaoh" target="_blank">新境界影视</a> | <a href="https://dycg1eql8aigr.cloudfront.net/zqMQA?ycrbtqc" target="_blank">文昭谈论</a> | <a href="https://d3gus727acem18.cloudfront.net/7?zbtcpcv" target="_blank">明慧</a></p><p><a href="https://d3l8osd9w9ntl9.cloudfront.net/9?vciuhbbyu" target="_blank">大法</a> | <a href="https://dycg1eql8aigr.cloudfront.net/3?vuyovrq" target="_blank">新唐人</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/obAhT?okcmownx" target="_blank">人民报</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/xXNHu?kdxmcw" target="_blank">放光明</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/5?zhbac" target="_blank">新纪元</a> | <a href="https://d23a1u4ljgwmvy.cloudfront.net/6?uapjdvdbs" target="_blank">希望之声</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/11?nfvaqtk" target="_blank">无界网络</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/Pueji?evtwt" target="_blank">追查国际</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/16?fsudf" target="_blank">明慧之窗</a> | <a href="https://dcz6rimunj42y.cloudfront.net/LdvzZ?fnrrz" target="_blank">细语人生</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/fBn3r?zgvcly" target="_blank">新世纪影视</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/PUWMb?jferhnqmu" target="_blank">江峰时刻</a> | <a href="https://duxu97yt14q37.cloudfront.net/8?uzluk" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?vvqxegpvs#1" target="_blank">首页</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/1?dnlgsiqgi" target="_blank">动态网</a> | <a href="https://d1jex6syje0yji.cloudfront.net/2?vitikjdg" target="_blank">大纪元</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/4?kgmxblkp" target="_blank">看中国</a> | <a href="https://d2fq83y0z2h6n4.cloudfront.net/pHh5q?syctffhqk" target="_blank">新生网</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/tktpt?juvtae" target="_blank">阿波罗网</a> | <a href="https://dme0bxbvomkno.cloudfront.net/Mjpvu?cpmmzjca" target="_blank">干净世界</a> | <a href="https://d3vg08phoazui6.cloudfront.net/10?uckpmtwfb" target="_blank">退党服务</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/Rffqf?nmnqjl" target="_blank">明慧广播</a> | <a href="https://d14a0yccee2yym.cloudfront.net/nw9Vn?dxjzkop" target="_blank">传奇时代</a> | <a href="https://d1ntfewljph5k2.cloudfront.net/AF9AG?qjsna" target="_blank">新境界影视</a> | <a href="https://d1tvvb2j7fpfrx.cloudfront.net/zqMQA?jmpbai" target="_blank">文昭谈论</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/7?twxeijw" target="_blank">明慧</a></p><p><a href="https://d3dnxm84b62m8k.cloudfront.net/9?jokwi" target="_blank">大法</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/3?rtxtsub" target="_blank">新唐人</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/obAhT?bbaxniak" target="_blank">人民报</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/xXNHu?gtvcg" target="_blank">放光明</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/5?pcllvk" target="_blank">新纪元</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/6?zblujez" target="_blank">希望之声</a> | <a href="https://d2n08tj75ohh5.cloudfront.net/11?ijxnxdf" target="_blank">无界网络</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/Pueji?vpvoba" target="_blank">追查国际</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/16?iyjtk" target="_blank">明慧之窗</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/LdvzZ?sgeqebdil" target="_blank">细语人生</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/fBn3r?llguefaja" target="_blank">新世纪影视</a> | <a href="https://dmepc9x6zy689.cloudfront.net/PUWMb?kntrc" target="_blank">江峰时刻</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/8?xvmiflajv" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346744.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2015/08/1508191326082584-320x200.jpg"><p align="center">击鼓传花游戏 中国股市设计理念和欧美不同</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346744.md#1" title="击鼓传花游戏 中国股市设计理念和欧美不同""><img width="73" src="https://i.epochtimes.com/assets/uploads/2015/08/1508191326082584-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346883.md#1" title="从太空直击米尔顿飓风眼 美宇航员发视频""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/10/id14346895-54052840531_b5e02c99fc_o-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346370.md#1" title="中国股市如过山车 专家：大股东趁机出逃""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/10/id14346666-a9fbb521f19a370dbd4621da124de7be-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346420.md#1" title="中共黑箱操作 党政军三大异常情况引猜测""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/01/id13914709-ind142652449-700x420-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346758.md#1">可可价格飙升 今年万圣节巧克力供应将减少</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346990.md#1">越南餐厅推出“珍珠奶茶牛肉面” 是啥味道？</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346981.md#1">密歇根州初选爆重复投票事件 7人被重罪起诉</a><br>
-:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346989.md#1">中共发改委记者会上 副主任赵辰昕意外成焦点</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346983.md#1">在英国卖断市 麦当劳脆鸡巨无霸将登陆美国</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346855.md#1">王友群：赖清德又出金句 中共再现三大丑</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346758.md#1">可可价格飙升 今年万圣节巧克力供应将减少</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346990.md#1">越南餐厅推出“珍珠奶茶牛肉面” 是啥味道？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346981.md#1">密歇根州初选爆重复投票事件 7人被重罪起诉</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346989.md#1">中共发改委记者会上 副主任赵辰昕意外成焦点</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346983.md#1">在英国卖断市 麦当劳脆鸡巨无霸将登陆美国</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346991.md#1">飓风来袭居民疏散 佛州公路拥堵燃油需求高</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346949.md#1">吐瓦鲁总理会赖清德：持续挺台参与全球体系</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346881.md#1">调查：中国跨境电商内卷严重 利润屡创新低</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346949.md#1">吐瓦鲁总理会赖清德：持续挺台参与全球体系</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346881.md#1">调查：中国跨境电商内卷严重 利润屡创新低</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346975.md#1">山东泰安又发生汽车撞学生事件 传2死3伤</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346832.md#1">英国制裁俄罗斯化学战部队指挥官</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346022.md#1">宁德时代停产 专家：中国锂电业进入淘汰赛</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345980.md#1">土木工程专业为何从中国顶尖大学消失</a><br>
@@ -30,7 +30,6 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345305.md#1">退休10年者也要交护照 中共限制更多人出国</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345315.md#1">习派官员突遭调离或落马早退 中南海生变？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346070.md#1">“减持潮”席卷A股 两周内超百家公司股东离场</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345662.md#1">中共前司法部长唐一军被双开 移送司法</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294630.md#1">【特稿】七二零：黑暗与光的交战</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243928.md#1">人类存亡危机与创世主的恩典</a><br>
@@ -105,13 +104,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344296.md#1">刘德华为什么不用微博？真实原因令人震惊</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344272.md#1">中国高校密集发布20份讣告 11人不到60岁</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14343741.md#1">【新闻大家谈】三中全会悬案 引中共元老反击？</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3phebs2ov8jj.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d3phebs2ov8jj.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 38,809</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d14hflkcmsxy0k.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d14hflkcmsxy0k.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 38,809</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 436,942,737 人
+!共 436,943,435 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346950.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/10/id14346958-1dfe7a48ac08050ad3b406e5303b2540-e1728443593604-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346950.md#1">心理健康日前 华人集会揭中共精神病院迫害</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344949.md#1">维权人士宋嘉鸿揭露上海黑监牢名录（三）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344733.md#1">“十一”前 北京公益人士朱斌突遭刑事拘留</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344440.md#1">两党议员促拜登营救遭中共关押的美国人</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14343895.md#1">北京法轮功学员朱颖狱中病重 美专家吁释放</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14343864.md#1">国际特赦组织：丁家喜邹幸彤黎智英为良心犯</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346881.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/06/id14022752-GettyImages-1248373967-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346881.md#1">调查：中国跨境电商内卷严重 利润屡创新低</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346861.md#1">中国股市主力资金出逃 一天净流出1698亿</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346737.md#1">十一假期为何未让香港零售商松口气</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346598.md#1">中共发改委发布会后 在美上市中资股齐下跌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346358.md#1">中国股市开高走低失去动力 港股大跌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346315.md#1">世银警告：中国经济放缓将加剧 影响东亚</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346486.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346486.md#1">广东纪委前副书记梁万里落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346411.md#1">今年第45名中管干部落马 宁夏前政协主席被查</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343375.md#1">【中国禁闻】A股击鼓传花 国际投行质疑涨势</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343377.md#1">【环球直击】哈马斯袭击以色列一周年 各地悼念</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343378.md#1">【全球新闻】应对中共 韩国菲律宾升为战略伙伴</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343380.md#1">【晚间新闻】五级飓风来袭 佛州紧急撤离</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346975.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/10/id14346984-992361824d60e590d119e85f0d6632ca-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346975.md#1">山东泰安又发生汽车撞学生事件 传2死3伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346521.md#1">广州60岁男子在小学门口持刀捅人 3人受伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346288.md#1">海口经济学院2名大学生校内溺亡 评论区炸锅</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345624.md#1">贵州桐梓县发生山体局部塌方 一人失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345610.md#1">十一长假最后一天 山西大同发生3.1级地震</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344549.md#1">国殇日湖南醴陵烟花厂爆炸 官方隐瞒伤亡</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346776.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/10/id14346791-f1d5fb1bcf77dddc46a447aa2ffd37b8-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346776.md#1">大陆网红“东北雨姐”跑路？ 拍摄基地人去房空</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346610.md#1">南昌男童从幼儿园二楼跌落 教育局：监控损坏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346523.md#1">爷孙3人2死1伤 广东阳春血案背后细节曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346390.md#1">河南一直升机降落时尾翼碰到高压线 坠落起火</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346322.md#1">广西住宅半夜起火 熟睡主人被狗叫醒得救</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346312.md#1">浙江男子连续4个月每天喝1箱饮料 险致失明</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342660.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/10/id14342666-20241002-mark-WI02-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342660.md#1">奇幻新片布洛斯南演国王 囚禁“人鱼”范冰冰</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/9/22/n14336078.md#1">异见诗人王藏之子遭校园霸凌 一周后才获立案</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/9/22/n14336354.md#1">澳加英收紧政策 中国学生留学越来越难？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/9/20/n14334834.md#1">中国男子足球队世界排名降至8年来新低</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/9/19/n14334424.md#1">中国象棋特级大师王天一、王跃飞被终身禁赛</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14331539.md#1">兰州大学在校研究生总量首超本科生 引热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344833.md#1">钟原：元老、军队反弹 中共党魁失势？</a><br>
